fixed some spacing on insta grid

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,18 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.insta-col a img {
+#insta-col a img {
   opacity: 1.0;
   transition: opacity 0.15s ease-in-out;
   -moz-transition: opacity 0.15s ease-in-out;
   -webkit-transition: opacity 0.15s ease-in-out;
 }
 
-.insta-col a img:hover {
+#insta-col a img:hover {
   opacity: 0.6;
   transition: opacity .15s ease-in-out;
   -moz-transition: opacity .15s ease-in-out;
   -webkit-transition: opacity .15s ease-in-out;
+}
+
+#insta-col {
+  padding: 10px;
 }
 
 #staff-bio {
